--- a/src/Microservices.Testing/Microservices.Testing.csproj
+++ b/src/Microservices.Testing/Microservices.Testing.csproj
@@ -42,6 +42,7 @@
     <PackageReference Include="Relay.Core.Plugins.AutoMapper" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.AutoMapper.Data" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.FluentValidation" Version="1.0.70" />
+    <PackageReference Include="Relay.Core.Plugins.Microsoft.Azure" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.SQLServer" Version="1.0.70" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.2.1" />
