--- a/src/Microservices/Microservices.csproj
+++ b/src/Microservices/Microservices.csproj
@@ -38,6 +38,7 @@
     <PackageReference Include="Relay.Core.Plugins.AutoMapper" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.AutoMapper.Data" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.FluentValidation" Version="1.0.70" />
+    <PackageReference Include="Relay.Core.Plugins.Microsoft.Azure" Version="1.0.70" />
     <PackageReference Include="Relay.Core.Plugins.SQLServer" Version="1.0.70" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.2.1" />
