--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -8,10 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Relay.Core.Plugins" Version="1.0.72" />
-    <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.72" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Relay.Core.Plugins" Version="1.0.73" />
+    <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.73" />
   </ItemGroup>
 
   <ItemGroup>
