--- a/src/Microservices.AzureFunctions/Microservices.AzureFunctions.csproj
+++ b/src/Microservices.AzureFunctions/Microservices.AzureFunctions.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentCommander.Database.SqlServer" Version="1.0.2" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
   </ItemGroup>
 
