--- a/src/Microservices/Microservices.csproj
+++ b/src/Microservices/Microservices.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.0.2" />
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="FluentCommander.Database.SqlServer" Version="1.0.2" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
@@ -29,16 +30,16 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.3" />
     <PackageReference Include="NetCore.AutoRegisterDi" Version="1.1.0" />
-    <PackageReference Include="Relay.Core" Version="1.0.94" />
-    <PackageReference Include="Relay.Core.Plugins" Version="1.0.86" />
-    <PackageReference Include="Relay.Core.Plugins.AutoMapper" Version="1.0.86" />
-    <PackageReference Include="Relay.Core.Plugins.AutoMapper.Data" Version="1.0.86" />
-    <PackageReference Include="Relay.Core.Plugins.FluentValidation" Version="1.0.86" />
-    <PackageReference Include="Relay.Core.Plugins.Microsoft.Azure" Version="1.0.86" />
+    <PackageReference Include="Relay.Core" Version="1.0.97" />
+    <PackageReference Include="Relay.Core.Plugins" Version="1.0.91" />
+    <PackageReference Include="Relay.Core.Plugins.AutoMapper" Version="1.0.91" />
+    <PackageReference Include="Relay.Core.Plugins.AutoMapper.Data" Version="1.0.91" />
+    <PackageReference Include="Relay.Core.Plugins.FluentValidation" Version="1.0.91" />
+    <PackageReference Include="Relay.Core.Plugins.Microsoft.Azure" Version="1.0.91" />
     <PackageReference Include="Relay.Core.Plugins.SQLServer" Version="1.0.86" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.2.1" />
