--- a/src/Microservices.AzureFunctions/Microservices.AzureFunctions.csproj
+++ b/src/Microservices.AzureFunctions/Microservices.AzureFunctions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Relay.Microservices.AzureFunctions</PackageId>
     <Version>1.0.1</Version>
     <Authors>Scott Ferguson</Authors>
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentCommander.Database.SqlServer" Version="1.0.2" />
+    <PackageReference Include="FluentCommander.SqlServer" Version="1.0.20" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
   </ItemGroup>
 
