--- a/src/Microservices.AzureFunctions/Microservices.AzureFunctions.csproj
+++ b/src/Microservices.AzureFunctions/Microservices.AzureFunctions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework></TargetFramework>
     <PackageId>Relay.Microservices.AzureFunctions</PackageId>
     <Version>1.0.1</Version>
     <Authors>Scott Ferguson</Authors>
