--- a/src/Microservices/Microservices.csproj
+++ b/src/Microservices/Microservices.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Relay.Microservices</PackageId>
     <Version>1.0.1</Version>
     <Authors>Scott Ferguson</Authors>
