--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,7 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-    <PackageReference Include="Relay.Core.Plugins" Version="1.0.107" />
+    <PackageReference Include="Relay.Core.Plugins" Version="1.0.108" />
     <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.101" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
   </ItemGroup>
