Bit of an overhaul to separate the nuget packages a little better

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ build:
   verbosity: normal
 test: off
 artifacts:
-- path: src\Microservices\bin\Release\*.nupkg
+- path: src\Web\bin\Release\*.nupkg
   name: NuGet
 deploy:
 - provider: Environment
