--- a/src/Web.Testing/Web.Testing.csproj
+++ b/src/Web.Testing/Web.Testing.csproj
@@ -19,10 +19,11 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.1.1" />
     <PackageReference Include="AutoBogus" Version="2.10.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.8" />
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="Moq.AutoMock" Version="2.1.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.160" />
+    <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.162" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
   </ItemGroup>
 
