--- a/src/Web.Testing/Web.Testing.csproj
+++ b/src/Web.Testing/Web.Testing.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Moq.AutoMock" Version="2.1.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.162" />
+    <PackageReference Include="Relay.Extensions" Version="1.0.1" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
   </ItemGroup>
 
