--- a/src/Web.Rest/Web.Rest.csproj
+++ b/src/Web.Rest/Web.Rest.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.2" />
+    <PackageReference Include="Swashbuckle.Core" Version="5.5.3" />
   </ItemGroup>
 
   <ItemGroup>
