--- a/src/Web.Testing.AzureFunctions/Web.Testing.AzureFunctions.csproj
+++ b/src/Web.Testing.AzureFunctions/Web.Testing.AzureFunctions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageId>Relay.Web.Testing.AzureFunctions</PackageId>
     <Version>1.0.1</Version>
     <Authors>Scott Ferguson</Authors>
@@ -24,7 +24,7 @@
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="Moq.AutoMock" Version="2.1.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.238" />
+    <PackageReference Include="Relay.Core.Plugins.NUnit" Version="1.0.241" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
   </ItemGroup>
 
