--- a/src/Web.Rest/Web.Rest.csproj
+++ b/src/Web.Rest/Web.Rest.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Relay.Web.Rest</PackageId>
     <Version>1.0.1</Version>
     <Authors>Scott Ferguson</Authors>
