--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Relay.Web</PackageId>
     <Version>1.0.1</Version>
     <Authors>Scott Ferguson</Authors>
@@ -34,12 +34,12 @@
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.8" />
     <PackageReference Include="Relay.Core" Version="1.0.165" />
-    <PackageReference Include="Relay.Core.Plugins" Version="1.0.243" />
-    <PackageReference Include="Relay.Core.Plugins.AutoMapper" Version="1.0.243" />
-    <PackageReference Include="Relay.Core.Plugins.Azure" Version="1.0.243" />
-    <PackageReference Include="Relay.Core.Plugins.EntityFramework" Version="1.0.243" />
-    <PackageReference Include="Relay.Core.Plugins.FluentValidation" Version="1.0.243" />
-    <PackageReference Include="Relay.Core.Plugins.MediatR" Version="1.0.243" />
+    <PackageReference Include="Relay.Core.Plugins" Version="1.0.244" />
+    <PackageReference Include="Relay.Core.Plugins.AutoMapper" Version="1.0.244" />
+    <PackageReference Include="Relay.Core.Plugins.Azure" Version="1.0.244" />
+    <PackageReference Include="Relay.Core.Plugins.EntityFramework" Version="1.0.244" />
+    <PackageReference Include="Relay.Core.Plugins.FluentValidation" Version="1.0.244" />
+    <PackageReference Include="Relay.Core.Plugins.MediatR" Version="1.0.244" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
